--- a/food project/index.html
+++ b/food project/index.html
@@ -263,10 +263,10 @@
                         </div>
                         <div>
                             <ul>
-                                <li><ion-icon name="checkmark-outline"></ion-icon>1 meal everyday</li>
-                                <li><ion-icon name="checkmark-outline"></ion-icon>Order 24*7</li>
-                                <li><ion-icon name="checkmark-outline"></ion-icon>Access to newest creations</li>
-                                <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+                                <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>1 meal everyday</li>
+                                <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Order 24*7</li>
+                                <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Access to newest creations</li>
+                                <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Free delivery</li>
                             </ul>
                         </div>
                         <div>
@@ -284,10 +284,10 @@
                         </div>
                         <div>
                             <ul>
-                                <li><ion-icon name="checkmark-outline"></ion-icon>1 meal 10</li>
-                                <li><ion-icon name="checkmark-outline"></ion-icon>Order 24*7</li>
-                                <li><ion-icon name="checkmark-outline"></ion-icon>Access to newest creations</li>
-                                <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+                                <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>1 meal 10</li>
+                                <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Order 24*7</li>
+                                <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Access to newest creations</li>
+                                <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Free delivery</li>
                             </ul>
                         </div>
                         <div>
@@ -305,10 +305,10 @@
                         </div>
                         <div>
                             <ul>
-                                <li><ion-icon name="checkmark-outline"></ion-icon>1 meal month</li>
-                                <li><ion-icon name="checkmark-outline"></ion-icon>Order 24*7</li>
-                                <li><ion-icon name="close-outline"></ion-icon></li>
-                                <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+                                <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>1 meal month</li>
+                                <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Order 24*7</li>
+                                <li><ion-icon class="icon-small" name="close-outline"></ion-icon></li>
+                                <li><ion-icon class="icon-small" name="checkmark-outline"></ion-icon>Free delivery</li>
                             </ul>
                         </div>
                         <div>
@@ -318,6 +318,95 @@
                 </div>
             </div>
         </section>
+     
+        <section class="section-form clearfix">
+            <div class="row">
+                <h2>We're happy to hear from you</h2>
+            </div>
+            <div class="row">
+                <form action="#" method="post" class="conatct-form">
+                    <div class="row">
+                        <div class="col span_1_of_3">
+                            <label for="">Name</label>
+                        </div>
+                        <div class="col span_2_of_3">
+                            <input type="text" name="name" id="name" placeholder="Your name">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col span_1_of_3">
+                            <label for="">Email</label>
+                        </div>
+                        <div class="col span_2_of_3">
+                            <input type="email" name="email" id="email" placeholder="Your name">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col span_1_of_3">
+                            <label for="">How did you find us?</label>
+                        </div>
+                        <div class="col span_2_of_3">
+                            <select name="find-us" id="find-us">
+                                <option value="friends">Friends</option>
+                                <option value="search">Search Engine</option>
+                                <option value="ad">Advertisement</option>
+                                <option value="other">Other</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col span_1_of_3">
+                            <label for="">Newsletter?</label>
+                        </div>
+                        <div class="col span_2_of_3">
+                            <input type="checkbox" name="news" id="news" checked>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col span_1_of_3">
+                            <label for="">Drop a line</label>
+                        </div>
+                        <div class="col span_2_of_3">
+                            <textarea name="text" id="ta" cols="30" rows="10"></textarea>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col span_1_of_3">
+                            <label for="">&nbsp;</label>
+                        </div>
+                        <div class="col span_2_of_3">
+                            <input type="submit" value="Send me">
+                        </div>
+                    </div>
+                    
+                </form>
+            </div>
+
+        </section>
+        <footer class="clearfix">
+            <div class="row">
+                <div class="col span_1_of_2">
+                    <ul class="footer-nav">
+                        <li><a href="#">About us</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Press</a></li>
+                        <li><a href="#">IOS App</a></li>
+                        <li><a href="#">Android App</a></li>
+                    </ul>
+                </div>
+                <div class="col span_1_of_2">
+                    <ul class="social-links">
+                        <li><a href="#"><ion-icon class="fb" name="logo-facebook"></ion-icon></a></li>
+                        <li><a href="#"><ion-icon class="twitter" name="logo-twitter"></ion-icon></a></li>
+                        <li><a href="#"><ion-icon class="google" name="logo-google"></ion-icon></a></li>
+                        <li><a href="#"><ion-icon class="insta" name="logo-instagram"></ion-icon></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <p>Copyright &copy; 2015 by omnifood.All rights reserved.</p>
+            </div>
+        </footer>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
           AOS.init();
