--- a/food project/index.html
+++ b/food project/index.html
@@ -338,7 +338,7 @@
                             <label for="">Email</label>
                         </div>
                         <div class="col span_2_of_3">
-                            <input type="email" name="email" id="email" placeholder="Your name">
+                            <input type="email" name="email" id="email" placeholder="Your Email">
                         </div>
                     </div>
                     <div class="row">
